# VM-Converter

./: .replit  pyproject.toml  replit.nix  requirements.txt
src/: convert.py  main.py
static/: styles.css
templates/: index.html
