[tool.poetry]
name = "vm-converter"
version = "0.1.0"
description = ""
authors = ["Canstralian <distortedprojection@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
# other dependencies
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
run = "uvicorn src.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "vm-converter"
description = "A tool to convert image files into VMs"